sample_cuda_gpu_vs2022_toolkit12_9/x64/Debug/sample_cuda_gpu_vs2022_toolkit12_9.log
  Compiling CUDA source file kernel.cu...
  Compiling CUDA source file DevSample.cu...
  
  C:\Users\Adel\source\repos\sample_cuda_gpu_vs2022_toolkit12_9\sample_cuda_gpu_vs2022_toolkit12_9>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.44.35207\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\include"  -G   --keep-dir x64\Debug  -maxrregcount=0    --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc143.pdb" -o C:\Users\Adel\source\repos\sample_cuda_gpu_vs2022_toolkit12_9\sample_cuda_gpu_vs2022_toolkit12_9\x64\Debug\kernel.cu.obj "C:\Users\Adel\source\repos\sample_cuda_gpu_vs2022_toolkit12_9\sample_cuda_gpu_vs2022_toolkit12_9\kernel.cu" 
  
  C:\Users\Adel\source\repos\sample_cuda_gpu_vs2022_toolkit12_9\sample_cuda_gpu_vs2022_toolkit12_9>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.44.35207\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\include"  -G   --keep-dir x64\Debug  -maxrregcount=0    --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc143.pdb" -o C:\Users\Adel\source\repos\sample_cuda_gpu_vs2022_toolkit12_9\sample_cuda_gpu_vs2022_toolkit12_9\x64\Debug\DevSample.cu.obj "C:\Users\Adel\source\repos\sample_cuda_gpu_vs2022_toolkit12_9\sample_cuda_gpu_vs2022_toolkit12_9\DevSample.cu" 
C:\Users\Adel\source\repos\sample_cuda_gpu_vs2022_toolkit12_9\sample_cuda_gpu_vs2022_toolkit12_9\DevSample.cu(21): warning #940-D: missing return statement at end of non-void function "cuda_add"
    }
    ^
  
  Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"
  
CUDACOMPILE : nvcc warning : Support for offline compilation for architectures prior to '<compute/sm/lto>_75' will be removed in a future release (Use -Wno-deprecated-gpu-targets to suppress warning).
  kernel.cu
C:\Users\Adel\source\repos\sample_cuda_gpu_vs2022_toolkit12_9\sample_cuda_gpu_vs2022_toolkit12_9\DevSample.cu(21): warning #940-D: missing return statement at end of non-void function "cuda_add"
    }
    ^
  
  Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"
  
C:\Users\Adel\source\repos\sample_cuda_gpu_vs2022_toolkit12_9\sample_cuda_gpu_vs2022_toolkit12_9\DevSample.cu(33): warning #177-D: variable "res" was declared but never referenced
    	int res[arraySize];
    	    ^
  
CUDACOMPILE : nvcc warning : Support for offline compilation for architectures prior to '<compute/sm/lto>_75' will be removed in a future release (Use -Wno-deprecated-gpu-targets to suppress warning).
  DevSample.cu
  tmpxft_00001ca4_00000000-7_kernel.cudafe1.cpp
  tmpxft_00002190_00000000-7_DevSample.cudafe1.cpp
C:\Users\Adel\source\repos\sample_cuda_gpu_vs2022_toolkit12_9\sample_cuda_gpu_vs2022_toolkit12_9\DevSample.cu(33): warning C4101: 'res': unreferenced local variable
C:\Users\Adel\source\repos\sample_cuda_gpu_vs2022_toolkit12_9\sample_cuda_gpu_vs2022_toolkit12_9\DevSample.cu(21): error C4716: 'cuda_add': must return a value
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\BuildCustomizations\CUDA 12.9.targets(801,9): error MSB3721: The command ""C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.44.35207\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.9\include"  -G   --keep-dir x64\Debug  -maxrregcount=0    --machine 64 --compile -cudart static  -g  -DWIN32 -DWIN64 -D_DEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /Od /FS /Zi /RTC1 /MDd " -Xcompiler "/Fdx64\Debug\vc143.pdb" -o C:\Users\Adel\source\repos\sample_cuda_gpu_vs2022_toolkit12_9\sample_cuda_gpu_vs2022_toolkit12_9\x64\Debug\DevSample.cu.obj "C:\Users\Adel\source\repos\sample_cuda_gpu_vs2022_toolkit12_9\sample_cuda_gpu_vs2022_toolkit12_9\DevSample.cu"" exited with code 2.
